gcc/testsuite/rust/rustc/ui/rfc-1937-termination-trait/termination-trait-main-wrong-type.rs
fn main() -> char { // { dg-error ".E0277." "" { target *-*-* } }
    ' '
}

